Added redirect to welovemods.com and SEO meta

--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>Free Robux 2025 | Earn Robux Fast & Safe | D2R.site</title>
-    <meta name="description" content="Get free Robux safely in 2025! Discover 100% working and legit ways to earn Robux — no scams, no hacks. Learn official methods, promo codes, and events for Roblox players. Updated daily on D2R.site.">
-    <meta name="keywords" content="free robux, robux, get robux, earn robux, robux 2025, free robux 2025, robux codes, robux rewards, robux giveaway, how to get robux, free roblox robux, roblox robux, robux event, robux apk, robux site, robux online, free robux legit">
+    <title>Download MOD APK Games 2025 | Free & Safe Mods | WeLoveMods</title>
+    <meta name="description" content="Download 100% working MOD APKs for Android — unlocked features, unlimited coins, premium games. Updated daily. Find your favorite games safely at WeLoveMods.">
+    <meta name="keywords" content="mod apk, game mod, happymod, findmodapk, android mods, unlocked apk, premium apk, unlimited coins, mod games 2025, welovemods">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="D2R.site">
+    <meta name="author" content="WeLoveMods.com">
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Free Robux 2025 — 100% Working & Safe Methods | D2R.site">
-    <meta property="og:description" content="Learn how to get free Robux safely — official ways, giveaways, and promo codes. No scams, no hacks.">
-    <meta property="og:url" content="https://d2r.site/">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="WeLoveMods — Free MOD APK Games 2025">
+    <meta property="og:description" content="Find and download safe, working MOD APKs and premium Android games. Updated daily.">
+    <meta property="og:url" content="https://welovemods.com/">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="D2R.site">
+    <meta property="og:site_name" content="WeLoveMods">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Free Robux 2025 | Earn Robux Safely">
-    <meta name="twitter:description" content="Legit ways to earn free Robux — giveaways, promo codes, and rewards. Updated 2025.">
+    <meta name="twitter:title" content="WeLoveMods — Free MOD APKs 2025">
+    <meta name="twitter:description" content="Get the latest Android MOD APK games, safe & verified downloads, updated daily.">
 
-    <link rel="canonical" href="https://d2r.site/">
+    <link rel="canonical" href="https://welovemods.com/">
 
+    <!-- Redirect (for SEO-safe domain move) -->
+    <meta http-equiv="refresh" content="0;url=https://welovemods.com/">
+    
+    <!-- Optional: JavaScript fallback redirect -->
+    <script>
+      window.location.href = "https://welovemods.com/";
+    </script>
   </head>
+
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <meta http-equiv="refresh" content="0;url=https://welovemods.com/">
+    </noscript>
   </body>
 </html>
