Added redirect to welovemods.com and SEO meta

--- a/index.html
+++ b/index.html
@@ -1,42 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Free Robux Generator 2025 – Get Free Robux Fast | D2R</title>
+    <meta name="description" content="Get free Robux safely using our 2025 updated Free Robux guide. Learn real ways to claim Robux rewards without scams. Fast, safe, and working.">
+    <meta name="keywords" content="Free Robux, free robux generator, robux free, how to get free robux, free robux 2025, robux codes, robux rewards, claim free robux">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f2f2f2; color: #333; line-height: 1.6; }
+        header { background: #1e90ff; color: white; padding: 20px 0; text-align: center; }
+        header h1 { margin: 0; font-size: 2em; }
+        main { max-width: 800px; margin: 20px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        h2 { color: #1e90ff; margin-top: 20px; }
+        a.cta-button { display: inline-block; padding: 12px 25px; margin: 15px 0; background-color: #28a745; color: white; text-decoration: none; font-weight: bold; border-radius: 5px; }
+        a.cta-button:hover { background-color: #218838; }
+        ul { margin: 0 0 15px 20px; }
+        footer { text-align: center; padding: 15px 0; background: #1e90ff; color: white; margin-top: 20px; border-top-left-radius: 10px; border-top-right-radius: 10px; }
+        @media (max-width: 600px) { main { margin: 10px; padding: 15px; } }
+    </style>
+</head>
+<body>
+<header>
+    <h1>Free Robux Generator 2025 – D2R</h1>
+</header>
+<main>
+    <p>Welcome to <strong>D2R</strong> – your ultimate guide to getting <strong>Free Robux</strong> safely and quickly in 2025. Here you will learn all the real ways to claim Robux without scams or fake generators.</p>
 
-    <!-- SEO Meta Tags -->
-    <title>Download MOD APK Games 2025 | Free & Safe Mods | WeLoveMods</title>
-    <meta name="description" content="Download 100% working MOD APKs for Android — unlocked features, unlimited coins, premium games. Updated daily. Find your favorite games safely at WeLoveMods.">
-    <meta name="keywords" content="mod apk, game mod, happymod, findmodapk, android mods, unlocked apk, premium apk, unlimited coins, mod games 2025, welovemods">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="WeLoveMods.com">
+    <h2>What is Robux?</h2>
+    <p>Robux is the official currency in Roblox. It is used to purchase:</p>
+    <ul>
+        <li>Skins</li>
+        <li>Passes</li>
+        <li>Accessories</li>
+        <li>Game upgrades</li>
+        <li>Premium items</li>
+    </ul>
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="WeLoveMods — Free MOD APK Games 2025">
-    <meta property="og:description" content="Find and download safe, working MOD APKs and premium Android games. Updated daily.">
-    <meta property="og:url" content="https://welovemods.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="WeLoveMods">
+    <h2>Can I Get Free Robux?</h2>
+    <p>Yes, but only through legitimate methods. There is no real “Robux generator” inside Roblox, but there are safe and legal ways to earn Robux for free.</p>
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WeLoveMods — Free MOD APKs 2025">
-    <meta name="twitter:description" content="Get the latest Android MOD APK games, safe & verified downloads, updated daily.">
+    <h2>Method 1: Reward Offers</h2>
+    <p>The fastest and easiest way to get Free Robux in 2025 is through reward offers. These offers give you points which you can redeem for Robux:</p>
+    <ul>
+        <li>Fast</li>
+        <li>Free</li>
+        <li>Works in all countries</li>
+        <li>No credit card required</li>
+    </ul>
+    <a class="cta-button" href="https://verifysuper.com/cl/i/qkdxd6" target="_blank">Start Offer Now!</a>
 
-    <link rel="canonical" href="https://welovemods.com/">
+    <h2>Method 2: Roblox Gift Cards</h2>
+    <p>Get Robux gift cards by completing:</p>
+    <ul>
+        <li>Surveys</li>
+        <li>Watching videos</li>
+        <li>Points systems</li>
+    </ul>
 
-    <!-- Redirect (for SEO-safe domain move) -->
-    <meta http-equiv="refresh" content="0;url=https://welovemods.com/">
-    
-    <!-- Optional: JavaScript fallback redirect -->
-    <script>
-      window.location.href = "https://welovemods.com/";
-    </script>
-  </head>
+    <h2>Method 3: Roblox Premium</h2>
+    <p>Roblox Premium subscription provides monthly Robux, higher game revenue share, and exclusive features.</p>
 
-  <body>
-    <noscript>
-      <meta http-equiv="refresh" content="0;url=https://welovemods.com/">
-    </noscript>
-  </body>
+    <h2>Method 4: Selling Items in Roblox</h2>
+    <p>Create and sell Shirts, Pants, and Accessories to earn Robux legally.</p>
+
+    <h2>Method 5: Giveaways</h2>
+    <p>Follow Roblox content creators on TikTok, Discord, and other social platforms for free Robux giveaways.</p>
+
+    <h2>Methods to Avoid ❌</h2>
+    <ul>
+        <li>“Robux Generator Unlimited” websites</li>
+        <li>“Free Robux No Human Verification” hacks</li>
+        <li>APK hacks or mods</li>
+        <li>Sites asking for your Roblox password</li>
+    </ul>
+
+    <h2>FAQ</h2>
+    <p><strong>Is Free Robux real?</strong> Yes, but only through legitimate methods like reward offers, gift cards, selling items, and Roblox Premium.</p>
+    <p><strong>Can I get Robux without buying?</strong> Yes, via offers, gift cards, selling items, or Premium subscription.</p>
+    <p><strong>Does Robux generator work?</strong> Real generators inside Roblox do not exist. Legal “generators” refer to reward offers that give Robux after completing tasks.</p>
+    <p><strong>Best method for Free Robux?</strong> Reward offers are the fastest and safest. <a class="cta-button" href="https://verifysuper.com/cl/i/qkdxd6" target="_blank">Start Now!</a></p>
+</main>
+<footer>
+    &copy; 2025 D2R | Free Robux Generator
+</footer>
+
+<!-- FAQ Schema for Google Snippets -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Is Free Robux real?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, but only through legitimate methods like reward offers, gift cards, selling items, and Roblox Premium."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I get Robux without buying?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, via offers, gift cards, selling items, or Premium subscription."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does Robux generator work?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Real generators inside Roblox do not exist. Legal 'generators' refer to reward offers that give Robux after completing tasks."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Best method for Free Robux?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Reward offers are the fastest and safest way to get Free Robux in 2025."
+      }
+    }
+  ]
+}
+</script>
+
+</body>
 </html>
